fix: remove double scrollbar

--- a/src/components/LayoutMain/LayoutMain.module.css
+++ b/src/components/LayoutMain/LayoutMain.module.css
@@ -7,13 +7,11 @@
 .Main {
     display: flex;
     flex-direction: column;
-    flex:1;
-    overflow: auto;     
+    flex:1;    
 }
 
 .LayoutMainContent {
     padding: 0 var(--gap-l);
     align-items: center;
     flex: 1;
-    overflow: auto;
 }
